RESOLVED FIXED285125
AX: AXProperty::InsideLink and AXProperty::SpeechHint are never updated after dynamic style changes
https://bugs.webkit.org/show_bug.cgi?id=285125
Summary AX: AXProperty::InsideLink and AXProperty::SpeechHint are never updated after...
Tyler Wilcock
Reported 2024-12-23 21:58:58 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-12-23 21:59:06 PST
Tyler Wilcock
Comment 2 2024-12-23 22:47:45 PST
EWS
Comment 3 2024-12-25 14:58:49 PST
Committed 288290@main (e60640802b80): <https://commits.webkit.org/288290@main> Reviewed commits have been landed. Closing PR #38359 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.