AX: AXProperty::InsideLink and AXProperty::SpeechHint are never updated after dynamic style changes https://bugs.webkit.org/show_bug.cgi?id=285125 rdar://141977027

Reviewed by Chris Fleizach.

Update these properties when style changes.

* LayoutTests/accessibility/dynamic-speak-as-expected.txt: Added.
* LayoutTests/accessibility/dynamic-speak-as.html: Added.
* LayoutTests/accessibility/link-becomes-visited-expected.txt: Added.
* LayoutTests/accessibility/link-becomes-visited.html: Added.
* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::onStyleChange):
(WebCore::AXObjectCache::updateIsolatedTree):
* Source/WebCore/accessibility/AXObjectCache.h:
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::updateNodeProperties):
* Tools/WebKitTestRunner/InjectedBundle/atspi/AccessibilityUIElementAtspi.cpp:
(WTR::AccessibilityUIElement::boolAttributeValue):
* Tools/WebKitTestRunner/InjectedBundle/ios/AccessibilityUIElementIOS.mm:
(WTR::AccessibilityUIElement::boolAttributeValue):

Canonical link: https://commits.webkit.org/288290@main